# idris-bash

./: .gitignore  LICENSE  LICENSE.md  README.md  idris-bash.cabal  prelude.sh  pythag.idr
.halcyon/: constraints
src/: Main.hs
src/IRTS/: CodegenBash.hs  CodegenEmitter.hs  CodegenUtils.hs
src/IRTS/Codegen/: Emitter.hs  ReaderEmitter.hs  Utils.hs
